--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,6 +49,75 @@ html {
     margin-bottom: 1rem !important;
   }
 }
+/*---------------------------------------------------product-detail---------------------------------------------------------------*/
+#product_detail_img_cintainer>div>img{
+  width:100%;
+  height:500px !important;
+  max-height: 500px !important;
+  object-fit: cover;
+}
+.product_detail_img{
+ 
+}
+#description{
+  padding:0.5rem 1rem;
+  color:black;
+  border:1px solid #ddd;
+  border-top:2px solid #ddd;
+  text-transform: uppercase;
+  transition: all .5s ease;
+  margin-bottom:-1px;
+  color: hsla(0,0%,40%,.85);
+  font-size: 16px;
+  font-weight: 700;
+  
+}
+#comment{
+  margin-left:0.5rem;
+  padding:0.5rem 1rem;
+ 
+  font-weight: 700;
+  border:1px solid rgb(224, 221, 221);
+  border-top:2px solid #ddd;
+  text-transform: uppercase;
+  transition: all .5s ease;
+  margin-bottom:-1px;
+  color: hsla(0,0%,40%,.85);
+  font-size: 16px;
+}
+.action_button{
+  border-top:2px solid #cbba9c !important;
+  border-bottom: 1px solid transparent !important;
+  background:white;
+}
+.description_container{
+ border:1px solid #ddd;
+}
+.comment_container{
+  border:1px solid #ddd;
+}
+.action_display{
+  display: none;
+}
+.description_table>tr{
+  border-bottom:1px solid grey;
+  padding:0.5rem 1rem;
+  padding-left:1rem;
+  padding-right:1rem;
+}
+.detail_button_cover{
+  margin-top:0;
+}
+@media  only screen and (max-width:938px) {
+  .detail_button_cover{
+    margin-top:1rem;
+  }
+}
+@media  only screen and (max-width:542px) {
+  .detail_button_cover{
+    margin-top:1rem;
+  }
+}
 /*-------------------------------------------------------------------butoon--------------------------------------------------------*/
 .btn_all_web{
   color:#cbba9c;
@@ -198,6 +267,10 @@ html {
  .nav_menu_container{
   display:none;
 }
+.search_active{
+  color:#685f52 !important;
+  font-weight:bold;
+}
 /**nav-responsive*/
 @media only screen and (max-width:960px){
   .row{
@@ -330,6 +403,11 @@ html {
   margin-right: 1rem;
 }
 }
+.search_select{
+  border-top: 1px solid transparent;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
+}
 @media only screen and (max-width:955px){
   .nav_container>nav{
     transition: all 1s ease 0s;
@@ -338,7 +416,7 @@ html {
     left: 0;
     width: 100%;
     /* height: 100px; */
-    z-index: 1;
+    z-index: 15;
     background: white;
   }
 }
@@ -873,6 +951,15 @@ li{
   z-index:2;
   position: relative;
 }
+/**-------------------------------------------------------history------------------------------------------*/
+/* .history_table{
+  min-height:500px;
+  height:auto;
+}
+.history_tr{
+  max-height:45px !important;
+  height:45px !important;
+} */
 /**-------------------------------------------------------admin---userinfo------------------------------------------*/
 .admin_userInfo_row{
   margin:0 !important;
@@ -894,6 +981,115 @@ tr:nth-child(even) {
   border:none;
   background:none;
 }
+.admin_sort_container{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
 .admin_sort_container>div>div>div{
   padding:.3rem !important;
+}
+/*-------------------------------------------------------------------comment section-----------------------------------------------------*/
+.commnet_fill{
+  color:darkgoldenrod;
+  transition:all .1s ease
+}
+.comment_user_content_container{
+    padding:1rem !important;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+}
+.comment_title_container{
+  padding-left: 24px;
+    padding-right: 24px;
+    height: 52px;
+    line-height: 52px;
+    background: rgba(203, 186, 156, 0.33);
+    display: flex;
+    align-items: center;
+}
+.comment_title{
+  font-weight: 500;
+ 
+  font-size: 16px;
+  line-height: 19px;
+  color: #212121;
+  letter-spacing: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.comment_textarea{
+    display: block;
+    width: 100%;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+.total_reviewer{
+  font-size: 3em;
+  font-weight:normal;
+  letter-spacing: -.3rem;
+  text-align: center;
+}
+.comment_product_review_cover{
+  border:.5px solid #ccc;
+  border-right:1px solid transparent;
+  border-left:1px solid transparent;
+  padding:.5rem 1rem;
+  font-size: 16px;
+  padding-left:1rem !important;
+  font-weight: 500;
+}
+.comment_product_sort_releave_cover{
+  border:.5px solid #ccc;
+  border-right: 1px solid transparent;
+}
+.comment_form_control{
+  margin-top:1rem !important;
+  margin-right:1rem !important;
+  width: 25% !important;
+}
+.comment_item_avatar{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+@media only screen and (max-width:670px){
+  .comment_form_control{
+    margin-top:1rem !important;
+    margin-right:1rem !important;
+    margin-left:1rem !important;
+    width: 100% !important;
+  }
+  .comment_item_avatar{
+    display:flex;
+    justify-content:start;
+    align-items:center;
+  }
+}
+/*-------------------------------------------------------------------------relative product---------------------------*/
+.relative_card{
+  margin: .2rem 1rem;
+ margin-top:1rem;
+ margin-bottom:3rem;
+ 
+}
+.product_relative__img{
+  width: 100%;
+    /* min-width: 400px; */
+    height: 200px;
+    max-height: 200px;
+    background-position: center;
+    background-size: cover;
+    object-fit: cover;
 }
